Bug 348166 - Future dates of scheduled transactions cannot be changed
Summary: Future dates of scheduled transactions cannot be changed
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR grave
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords: regression
Depends on: 345061
Blocks:
  Show dependency treegraph
 
Reported: 2015-05-24 00:14 UTC by Ian Neal
Modified: 2017-07-01 11:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Neal 2015-05-24 00:14:53 UTC
When editing scheduled transactions, changing the date on the first occurrence should be reflected in future ones but that no longer happens.

Reproducible: Always

Steps to Reproduce:
1. Create a scheduled monthly transaction for 20th June 2015
2. Check that it shows up for 20th of every following month in the ledger
3. Edit schedule for the transaction to happen on 15th June 2015 instead
4. Check what date future transactions happen on

Actual Results:  
First transaction shows as being on 15th June
Future transactions show as being on 20th of the month

Expected Results:  
All transactions should show as being on 15th of the month

Reversing the change from bug 345061 fixes this issue
Comment 1 Thomas Baumgart 2015-05-24 06:16:47 UTC
Git commit 64e686b1172faae8ac5e433aa1ee1afea5d12fa3 by Thomas Baumgart.
Committed on 24/05/2015 at 06:14.
Pushed by tbaumgart into branch 'master'.

Update start date of schedule if changed by user

The start date of a schedule was not updated when a user changed the
date of the schedule. This was a leftover of the fix for bug #345061.

M  +3    -1    kmymoney/dialogs/keditscheduledlg.cpp

http://commits.kde.org/kmymoney/64e686b1172faae8ac5e433aa1ee1afea5d12fa3
Comment 2 Ian Neal 2015-05-24 15:15:17 UTC
Will this need backporting to 4.7.x too?
Comment 3 Thomas Baumgart 2015-05-25 12:57:46 UTC
Yes, but only if bug #345061 is backported also.