Update start date of schedule if changed by user

The start date of a schedule was not updated when a user changed the
date of the schedule. This was a leftover of the fix for bug #345061.

BUG: 348166